--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<!-- !Body -->
 	<body>
-<p> Testing gh-pages</p>
+		<h1> Testing gh-pages </h1>
 
 		<!-- JavaScript -->
 		<script src=""></script>
