--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -94,7 +94,7 @@
           <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -115,7 +115,7 @@
           <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -135,7 +135,7 @@
           <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -157,7 +157,7 @@
           <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -198,7 +198,7 @@
        <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -217,7 +217,7 @@
           <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
@@ -309,7 +309,7 @@
           <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
               	<ul>
-              		<li><a href="#goldPg" data-icon="home" data-iconpos="top">Home</a></li>
+              		<li><a href="#homepg" data-icon="home" data-iconpos="top">Home</a></li>
                 	<li><a href="#addItem" data-icon="grid" data-iconpos="top">New</a></li>
                 	<li><a href="#about" data-icon="info" data-iconpos="top">About</a></li>
                 </ul>
